--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="search">请输入搜索单词</string>
     <string name="word">Word</string>
+    <string name="action_help">帮助</string>
 </resources>
